First clean ups of preprocessing notebook

--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -4,11 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Brain Solver Python Processing Notebook\n",
+    "# Brain Solver Python Pre-Processing Notebook\n",
     "\n",
     "This notebook utilizes the custom `brain_solver` package for analyzing brain activity data. Our data sources include official datasets from Kaggle competitions and additional datasets for enhanced model training and evaluation.\n",
     "\n",
-    "This is the Training notebook.\n",
+    "This is the Pre-Processing notebook.\n",
+    "\n",
+    "**Authors: Luppo Sloup, Dick Blankvoort, Tygo Francissen (MLiP Group 9)**\n",
     "\n",
     "## Data Sources\n",
     "\n",
@@ -26,11 +28,17 @@
     "\n",
     "- **Brain-EEG-Spectrograms**\n",
     "  - **Source:** [Kaggle Dataset](https://www.kaggle.com/datasets/cdeotte/brain-eeg-spectrograms)\n",
-    "  - **Description:** The `EEG_Spectrograms` folder includes one NumPy file per EEG ID, with each array shaped as (128x256x4), representing (frequency, time, montage chain). This dataset provides a more nuanced understanding of brain activity through EEG spectrograms.\n",
+    "  - **Description:** The `EEG_Spectrograms` folder includes one NumPy file per EEG ID, with each array shaped as (128x256x4), representing (frequency, time, montage chain). This dataset provides a more nuanced understanding of brain activity through EEG spectrograms. They were created based on the raw data.\n",
     "\n",
     "- **hms_efficientnetb0_pt_ckpts**\n",
     "  - **Source:** [Kaggle Dataset](https://www.kaggle.com/datasets/crackle/hms-efficientnetb0-pt-ckpts)\n",
-    "  - **Description:** This dataset offers pre-trained checkpoints for EfficientNetB0 models, tailored for the HMS competition. It's intended for use in fine-tuning models on the specific task of harmful brain activity classification.\n"
+    "  - **Description:** This dataset offers pre-trained checkpoints for EfficientNetB0 models, tailored for the HMS competition. It's intended for use in fine-tuning models on the specific task of harmful brain activity classification.\n",
+    "\n",
+    "### Overview:\n",
+    "\n",
+    "In addition to the data sources above, the following inputs are needed for this notebook:\n",
+    "\n",
+    "<img src=\"images/overview_preprocessing.png\" alt=\"overview3\" width=\"250\"/>"
    ]
   },
   {
@@ -39,22 +47,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os, sys\n",
-    "import gc\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import torch\n",
+    "# Imports for the notebook\n",
+    "import os, torch, warnings\n",
+    "import numpy as np, pandas as pd, pytorch_lightning as pl\n",
     "from torch.utils.data import DataLoader\n",
-    "import pytorch_lightning as pl\n",
-    "from brain_solver import Helpers as hp, Trainer as tr, BrainModel as br, EEGDataset\n",
-    "from brain_solver import Wav2Vec2 as w2v\n",
-    "from brain_solver import Filters, FilterType\n",
     "from transformers.utils import logging\n",
-    "from tqdm import tqdm\n",
+    "from brain_solver import (\n",
+    "    Helpers as hp,\n",
+    "    Config,\n",
+    ")\n",
     "\n",
-    "# Suppress warnings if desired\n",
-    "import warnings\n",
-    "\n",
+    "# Suppress warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "logging.set_verbosity(logging.CRITICAL)\n",
     "\n",
@@ -70,11 +73,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from brain_solver import Config\n",
-    "\n",
-    "full_path = \"/home/osloup/NoodleNappers/brain/data/\"  # Luppo\n",
-    "# full_path = \"C:/Users/tygof/Documents/Semester 8/MLiP/NoodleNappers/brain/data/\" # Tygo\n",
-    "# full_path = \"C:/Users/dahbl/Documents/TrueDocs/Uni/Year 4/Semester 2/Machine Learning in Practice/brain/brain/data/\" # Dick\n",
+    "# Possibility to set a local path for the data\n",
+    "full_path = \"\"\n",
     "config = Config(\n",
     "    full_path,\n",
     "    full_path + \"out/\",\n",
@@ -83,16 +83,21 @@
     "    should_read_brain_spectograms=False,\n",
     "    should_read_eeg_spectrogram_files=False,\n",
     "    USE_PRETRAINED_MODEL=False,\n",
+    "    FINE_TUNE=False,\n",
     ")\n",
     "\n",
-    "# Kaggle Pull\n",
-    "# full_path = \"/kaggle/input/\"\n",
-    "# config = Config(full_path, \"/kaggle/working/\", USE_EEG_SPECTROGRAMS=True, USE_KAGGLE_SPECTROGRAMS=True, should_read_brain_spectograms=False, should_read_eeg_spectrogram_files=False, USE_PRETRAINED_MODEL=False)\n",
-    "\n",
-    "import sys\n",
-    "\n",
-    "sys.path.append(full_path + \"kaggle-kl-div\")\n",
-    "# from kaggle_kl_div import score"
+    "# Path to set for Kaggle\n",
+    "full_path = \"/kaggle/input/\"\n",
+    "config = Config(\n",
+    "    full_path,\n",
+    "    \"/kaggle/working/\",\n",
+    "    USE_EEG_SPECTROGRAMS=True,\n",
+    "    USE_KAGGLE_SPECTROGRAMS=True,\n",
+    "    should_read_brain_spectograms=False,\n",
+    "    should_read_eeg_spectrogram_files=False,\n",
+    "    USE_PRETRAINED_MODEL=False,\n",
+    "    FINE_TUNE=False,\n",
+    ")"
    ]
   },
   {
@@ -101,14 +106,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create Output folder if does not exist\n",
+    "# Create output folder if it does not exist\n",
     "if not os.path.exists(config.output_path):\n",
     "    os.makedirs(config.output_path)\n",
     "\n",
     "# Initialize random environment\n",
-    "pl.seed_everything(config.seed, workers=True)\n",
-    "\n",
-    "print(config.data_train_csv)"
+    "pl.seed_everything(config.seed, workers=True)"
    ]
   },
   {
@@ -117,6 +120,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Read the train CSV file\n",
     "train_df: pd.DataFrame = hp.load_csv(config.data_train_csv)\n",
     "\n",
     "if train_df is None:\n",
@@ -127,24 +131,10 @@
     "    TARGETS = train_df.columns[-6:]\n",
     "    TARS = {\"Seizure\": 0, \"LPD\": 1, \"GPD\": 2, \"LRDA\": 3, \"GRDA\": 4, \"Other\": 5}\n",
     "    TARS_INV = {x: y for y, x in TARS.items()}\n",
-    "    print(\"Train shape:\", train_df.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_data_preprocessed = hp.preprocess_eeg_data(train_df, TARGETS)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    print(\"Train shape:\", train_df.shape)\n",
+    "\n",
+    "# Preprocess the train data\n",
+    "train_data_preprocessed = hp.preprocess_eeg_data(train_df, TARGETS)\n",
     "train_data_preprocessed.head()"
    ]
   },
@@ -404,7 +394,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
