Clean up wav2vec code

--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -20,25 +20,9 @@
     "  - **Source:** [Kaggle Competition](https://www.kaggle.com/competitions/hms-harmful-brain-activity-classification)\n",
     "  - **Description:** This competition focuses on classifying harmful brain activity. It includes a comprehensive dataset for training and testing models.\n",
     "\n",
-    "- **Brain-Spectrograms**\n",
-    "  - **Source:** [Kaggle Dataset](https://www.kaggle.com/datasets/cdeotte/brain-spectrograms)\n",
-    "  - **Description:** The `specs.npy` file contains all the spectrograms from the HMS competition, offering a detailed view of brain activity through visual representations.\n",
-    "\n",
-    "### Additional:\n",
-    "\n",
-    "- **Brain-EEG-Spectrograms**\n",
-    "  - **Source:** [Kaggle Dataset](https://www.kaggle.com/datasets/cdeotte/brain-eeg-spectrograms)\n",
-    "  - **Description:** The `EEG_Spectrograms` folder includes one NumPy file per EEG ID, with each array shaped as (128x256x4), representing (frequency, time, montage chain). This dataset provides a more nuanced understanding of brain activity through EEG spectrograms. They were created based on the raw data.\n",
-    "\n",
-    "- **hms_efficientnetb0_pt_ckpts**\n",
-    "  - **Source:** [Kaggle Dataset](https://www.kaggle.com/datasets/crackle/hms-efficientnetb0-pt-ckpts)\n",
-    "  - **Description:** This dataset offers pre-trained checkpoints for EfficientNetB0 models, tailored for the HMS competition. It's intended for use in fine-tuning models on the specific task of harmful brain activity classification.\n",
-    "\n",
     "### Overview:\n",
     "\n",
-    "In addition to the data sources above, the following inputs are needed for this notebook:\n",
-    "\n",
-    "<img src=\"images/overview_preprocessing.png\" alt=\"overview3\" width=\"250\"/>"
+    "This notebook is meant to be run locally, which will save raw EEG data and spectograms after processing them with wav2vec or filters in `data/out/`."
    ]
   },
   {
@@ -52,9 +36,13 @@
     "import numpy as np, pandas as pd, pytorch_lightning as pl\n",
     "from torch.utils.data import DataLoader\n",
     "from transformers.utils import logging\n",
+    "from tqdm import tqdm\n",
     "from brain_solver import (\n",
     "    Helpers as hp,\n",
     "    Config,\n",
+    "    Filters,\n",
+    "    FilterType,\n",
+    "    Wav2Vec2 as w2v,\n",
     ")\n",
     "\n",
     "# Suppress warnings\n",
@@ -144,52 +132,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Initialize the Filters class\n",
-    "# ft = Filters(order=5)\n",
-    "\n",
-    "# train_eegs/ EEG data from one or more overlapping samples. Use the metadata in train.csv to select specific annotated subsets. The column names are the names of the individual electrode locations for EEG leads, with one exception. The EKG column is for an electrocardiogram lead that records data from the heart. All of the EEG data (for both train and test) was collected at a frequency of 200 samples per second.\n",
-    "\n",
-    "# Define filter parameters\n",
-    "# cutoff_low = 0.1  # Low cutoff frequency (Hz)\n",
-    "# cutoff_high = 50.0  # High cutoff frequency (Hz)\n",
-    "# fs = 200  # Sampling rate (Hz)\n",
-    "\n",
-    "# filtered_brain_spectrograms = {key: ft.apply_filter_to_spectrogram(spectrogram, [cutoff_low, cutoff_high], fs, FilterType.BANDPASS) for key, spectrogram in spectrograms.items()}\n",
-    "# filtered_eeg_spectrograms = {key: ft.apply_filter_to_spectrogram(spectrogram, [cutoff_low, cutoff_high], fs, FilterType.BANDPASS) for key, spectrogram in data_eeg_spectrograms.items()}\n",
-    "\n",
-    "# combined_brain_spectrograms = {key: {'raw': spectrograms[key], 'filtered': filtered_brain_spectrograms[key]} for key in spectrograms}\n",
-    "# combined_eeg_spectrograms = {key: {'raw': data_eeg_spectrograms[key], 'filtered': filtered_eeg_spectrograms[key]} for key in data_eeg_spectrograms}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# Read the number of spectograms\n",
     "read_path = config.data_spectograms\n",
     "\n",
     "files = os.listdir(read_path)\n",
-    "print(f\"There are {len(files)} spectrogram parquets\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create Output folder for wav2vec if does not exist\n",
+    "print(f\"There are {len(files)} spectrogram parquets\")\n",
+    "\n",
+    "# Create output folder for wav2vec if it does not exist\n",
     "if not os.path.exists(config.data_w2v_specs):\n",
-    "    os.makedirs(config.data_w2v_specs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    os.makedirs(config.data_w2v_specs)\n",
+    "\n",
     "force_regenerate = False"
    ]
   },
@@ -218,68 +170,69 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# for i, f in tqdm(enumerate(files), total=len(files)):\n",
-    "#     name = f[:-8]\n",
+    "# Process spectrograms with wav2vec and filtering\n",
+    "for i, f in tqdm(enumerate(files), total=len(files)):\n",
+    "    name = f[:-8]\n",
     "\n",
-    "#     # First, handle the wav2vec-only processing\n",
-    "#     # Define a directory for wav2vec processed data without filtering\n",
-    "#     w2v_only_dir = os.path.join(config.data_w2v_specs, 'wav2vec_only')\n",
-    "#     os.makedirs(w2v_only_dir, exist_ok=True)\n",
+    "    # First, handle the wav2vec-only processing\n",
+    "    # Define a directory for wav2vec processed data without filtering\n",
+    "    w2v_only_dir = os.path.join(config.data_w2v_specs, 'wav2vec_only')\n",
+    "    os.makedirs(w2v_only_dir, exist_ok=True)\n",
     "\n",
-    "#     # Define output filename for wav2vec processed data without filtering\n",
-    "#     w2v_only_output_filename = os.path.join(w2v_only_dir, f\"{name}.npy\")\n",
+    "    # Define output filename for wav2vec processed data without filtering\n",
+    "    w2v_only_output_filename = os.path.join(w2v_only_dir, f\"{name}.npy\")\n",
     "\n",
-    "#     # Check if wav2vec processed data without filtering needs to be generated\n",
-    "#     if not os.path.exists(w2v_only_output_filename) or force_regenerate:\n",
-    "#         try:\n",
-    "#             # Load the data from the parquet file\n",
-    "#             parquet_file = pd.read_parquet(os.path.join(read_path, f))\n",
-    "#             data_for_processing = parquet_file.iloc[:, 1:].values\n",
-    "#             # Assuming data_for_processing needs to be in a specific format for wav2vec, adjust as necessary\n",
+    "    # Check if wav2vec processed data without filtering needs to be generated\n",
+    "    if not os.path.exists(w2v_only_output_filename) or force_regenerate:\n",
+    "        try:\n",
+    "            # Load the data from the parquet file\n",
+    "            parquet_file = pd.read_parquet(os.path.join(read_path, f))\n",
+    "            data_for_processing = parquet_file.iloc[:, 1:].values\n",
+    "            # Assuming data_for_processing needs to be in a specific format for wav2vec, adjust as necessary\n",
     "\n",
-    "#             # Process with wav2vec and save\n",
-    "#             w2v_only_output = w2v.wav2vec2(data_for_processing)\n",
-    "#             np.save(w2v_only_output_filename, w2v_only_output)\n",
-    "#         except Exception as e:\n",
-    "#             print(f\"ERROR: An unexpected error occurred for {name} (wav2vec only): {e}\")\n",
+    "            # Process with wav2vec and save\n",
+    "            w2v_only_output = w2v.wav2vec2(data_for_processing)\n",
+    "            np.save(w2v_only_output_filename, w2v_only_output)\n",
+    "        except Exception as e:\n",
+    "            print(f\"ERROR: An unexpected error occurred for {name} (wav2vec only): {e}\")\n",
     "\n",
-    "#     # Then, continue with the existing loop for filtered data processing\n",
-    "#     for filter_type, cutoff in cutoffs.items():\n",
-    "#         # Define directories for raw and w2v processed data\n",
-    "#         raw_dir = os.path.join(config.data_w2v_specs, filter_type.name, 'raw')\n",
-    "#         w2v_dir = os.path.join(config.data_w2v_specs, filter_type.name, 'w2v')\n",
+    "    # Then, continue with the existing loop for filtered data processing\n",
+    "    for filter_type, cutoff in cutoffs.items():\n",
+    "        # Define directories for raw and w2v processed data\n",
+    "        raw_dir = os.path.join(config.data_w2v_specs, filter_type.name, 'raw')\n",
+    "        w2v_dir = os.path.join(config.data_w2v_specs, filter_type.name, 'w2v')\n",
     "\n",
-    "#         # Ensure directories exist\n",
-    "#         os.makedirs(raw_dir, exist_ok=True)\n",
-    "#         os.makedirs(w2v_dir, exist_ok=True)\n",
+    "        # Ensure directories exist\n",
+    "        os.makedirs(raw_dir, exist_ok=True)\n",
+    "        os.makedirs(w2v_dir, exist_ok=True)\n",
     "\n",
-    "#         # Define output filenames for raw and w2v processed data\n",
-    "#         raw_output_filename = os.path.join(raw_dir, f\"{name}.npy\")\n",
-    "#         w2v_output_filename = os.path.join(w2v_dir, f\"{name}.npy\")\n",
+    "        # Define output filenames for raw and w2v processed data\n",
+    "        raw_output_filename = os.path.join(raw_dir, f\"{name}.npy\")\n",
+    "        w2v_output_filename = os.path.join(w2v_dir, f\"{name}.npy\")\n",
     "\n",
-    "#         try:\n",
-    "#             # Check if raw filtered data needs to be processed\n",
-    "#             if not os.path.exists(raw_output_filename) or force_regenerate:\n",
-    "#                 if 'data_for_processing' not in locals():\n",
-    "#                     # Load the data only if it hasn't been loaded already\n",
-    "#                     parquet_file = pd.read_parquet(os.path.join(read_path, f))\n",
-    "#                     data_for_processing = parquet_file.iloc[:, 1:].values\n",
-    "#                 parquet_file_non_nan = np.nan_to_num(data_for_processing, nan=0)\n",
+    "        try:\n",
+    "            # Check if raw filtered data needs to be processed\n",
+    "            if not os.path.exists(raw_output_filename) or force_regenerate:\n",
+    "                if 'data_for_processing' not in locals():\n",
+    "                    # Load the data only if it hasn't been loaded already\n",
+    "                    parquet_file = pd.read_parquet(os.path.join(read_path, f))\n",
+    "                    data_for_processing = parquet_file.iloc[:, 1:].values\n",
+    "                parquet_file_non_nan = np.nan_to_num(data_for_processing, nan=0)\n",
     "\n",
-    "#                 filtered_spectrogram = ft.apply_filter_to_spectrogram(parquet_file_non_nan, cutoff, fs, filter_type)\n",
-    "#                 np.save(raw_output_filename, filtered_spectrogram)\n",
+    "                filtered_spectrogram = ft.apply_filter_to_spectrogram(parquet_file_non_nan, cutoff, fs, filter_type)\n",
+    "                np.save(raw_output_filename, filtered_spectrogram)\n",
     "\n",
-    "#             # Check if w2v processed data needs to be generated\n",
-    "#             if not os.path.exists(w2v_output_filename) or force_regenerate:\n",
-    "#                 if 'filtered_spectrogram' not in locals():\n",
-    "#                     # Load the existing raw filtered data if it wasn't just generated\n",
-    "#                     filtered_spectrogram = np.load(raw_output_filename)\n",
+    "            # Check if w2v processed data needs to be generated\n",
+    "            if not os.path.exists(w2v_output_filename) or force_regenerate:\n",
+    "                if 'filtered_spectrogram' not in locals():\n",
+    "                    # Load the existing raw filtered data if it wasn't just generated\n",
+    "                    filtered_spectrogram = np.load(raw_output_filename)\n",
     "\n",
-    "#                 w2v_output = w2v.wav2vec2(filtered_spectrogram)\n",
-    "#                 np.save(w2v_output_filename, w2v_output)\n",
+    "                w2v_output = w2v.wav2vec2(filtered_spectrogram)\n",
+    "                np.save(w2v_output_filename, w2v_output)\n",
     "\n",
-    "#         except Exception as e:\n",
-    "#             print(f\"ERROR: An unexpected error occurred for {name}: {e}\")"
+    "        except Exception as e:\n",
+    "            print(f\"ERROR: An unexpected error occurred for {name}: {e}\")"
    ]
   },
   {
@@ -288,6 +241,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Read the number of raw EEGs\n",
     "read_path_eeg = config.path_to_eeg_spectrograms_folder\n",
     "\n",
     "files_eeg = os.listdir(read_path_eeg)\n",
@@ -302,15 +256,12 @@
    "source": [
     "# Create Output folder for wav2vec if does not exist\n",
     "if not os.path.exists(config.data_w2v_specs_eeg):\n",
-    "    os.makedirs(config.data_w2v_specs_eeg)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    os.makedirs(config.data_w2v_specs_eeg)\n",
+    "\n",
+    "# Define a directory for wav2vec processed data without filtering\n",
+    "w2v_only_dir = os.path.join(config.data_w2v_specs_eeg, \"wav2vec_only\")\n",
+    "os.makedirs(w2v_only_dir, exist_ok=True)\n",
+    "\n",
     "force_regenerate = False\n",
     "min_length = 1600"
    ]
@@ -321,10 +272,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define a directory for wav2vec processed data without filtering\n",
-    "w2v_only_dir = os.path.join(config.data_w2v_specs_eeg, \"wav2vec_only\")\n",
-    "os.makedirs(w2v_only_dir, exist_ok=True)\n",
-    "\n",
+    "# Process raw EEGS with wav2vec and filtering\n",
     "for eeg_id, spectrogram_path in tqdm(enumerate(files_eeg), total=len(files_eeg)):\n",
     "    name = spectrogram_path[:-8]\n",
     "\n",
@@ -334,16 +282,11 @@
     "    # Process with wav2vec (no filter)\n",
     "    if force_regenerate or not os.path.exists(w2v_only_output_filename):\n",
     "        # Assuming w2v.wav2vec2 can handle the preprocessed_data directly\n",
-    "        # padded_spectrogram = pad_sequence(padded_spectrogram, min_length)\n",
     "        spectrogram = np.load(os.path.join(read_path_eeg, spectrogram_path))\n",
     "        w2v_output = w2v.wav2vec2(spectrogram, proc_eegs=True)\n",
     "        np.save(w2v_only_output_filename, w2v_output)\n",
     "\n",
     "        load = np.load(w2v_only_output_filename)\n",
-    "        print(spectrogram.shape)\n",
-    "        print(\"haha\")\n",
-    "        print(load.shape)\n",
-    "        exit()\n",
     "\n",
     "    for filter_type in cutoffs:\n",
     "        # Define directories for raw and w2v processed data within each filter type folder\n",
@@ -371,9 +314,9 @@
     "            np.save(raw_output_filename, filtered_spectrogram)\n",
     "\n",
     "            # Process filtered data with wav2vec\n",
-    "            # padded_filtered_spectrogram = pad_sequence(filtered_spectrogram, min_length)\n",
     "            w2v_filtered_output = w2v.wav2vec2(filtered_spectrogram, proc_eegs=True)\n",
     "\n",
+    "            # Save processed data\n",
     "            np.save(w2v_output_filename, w2v_filtered_output)"
    ]
   }
