Try fix image display

--- a/ensemble-7-models.ipynb
+++ b/ensemble-7-models.ipynb
@@ -44,7 +44,7 @@
     "\n",
     "The following inputs are needed for this notebook:\n",
     "\n",
-    "<img src=\"images/overview_ensemble.png\" alt=\"overview4\" width=\"250\"/>"
+    "<img src=\"images/overview_ensemble.png\" width=\"250\" />"
    ]
   },
   {
