--- a/inference.ipynb
+++ b/inference.ipynb
@@ -38,7 +38,7 @@
     "\n",
     "In addition to the data sources above, the following inputs are needed for this notebook:\n",
     "\n",
-    "<img src=\"images/overview_inference.png\" alt=\"overview2\" width=\"250\"/>"
+    "<img src=\"images/overview_inference.png\" width=\"250\" />"
    ]
   },
   {
