--- a/training.ipynb
+++ b/training.ipynb
@@ -38,7 +38,7 @@
     "\n",
     "In addition to the data sources above, the following inputs are needed for this notebook:\n",
     "\n",
-    "<img src=\"images/overview_training.png\" alt=\"overview\" width=\"250\"/>"
+    "<img src=\"images/overview_training.png\" width=\"250\" />"
    ]
   },
   {
