--- a/training.ipynb
+++ b/training.ipynb
@@ -37,8 +37,9 @@
     "### Overview:\n",
     "\n",
     "In addition to the data sources above, the following inputs are needed for this notebook:\n",
-    "\n",
-    "<img src=\"./images/overview_training.png\" width=\"250\" />"
+    "<p>\n",
+    "    <img src=\"images/overview_training.png\" width=\"250\" />\n",
+    "</p>"
    ]
   },
   {
