--- a/training.ipynb
+++ b/training.ipynb
@@ -36,10 +36,9 @@
     "\n",
     "### Overview:\n",
     "\n",
-    "In addition to the data sources above, the following inputs are needed for this notebook:\n",
-    "<p>\n",
-    "    <img src=\"images/overview_training.png\" width=\"250\" />\n",
-    "</p>"
+    "In addition to the data sources above, the inputs that are needed for this notebook are shown in \n",
+    "\n",
+    "<img src=\"overview_training.png\" width=\"250\" />"
    ]
   },
   {
