--- a/training.ipynb
+++ b/training.ipynb
@@ -36,9 +36,9 @@
     "\n",
     "### Overview:\n",
     "\n",
-    "In addition to the data sources above, the inputs that are needed for this notebook are shown in \n",
+    "In addition to the data sources above, the following inputs are needed for this notebook:\n",
     "\n",
-    "<img src=\"overview_training.png\" width=\"250\" />"
+    "<img src=\"images/overview_training.png\" width=\"250\" />"
    ]
   },
   {
