feat: Black formatter

--- a/inference.ipynb
+++ b/inference.ipynb
@@ -217,7 +217,9 @@
     "print()\n",
     "for i, eeg_id in enumerate(EEG_IDS2):\n",
     "    # Create spectogram from EEG parquet file\n",
-    "    img = hp.spectrogram_from_eeg(f\"{config.data_eeg_test}{eeg_id}.parquet\", i < DISPLAY, config.use_wavelet)\n",
+    "    img = hp.spectrogram_from_eeg(\n",
+    "        f\"{config.data_eeg_test}{eeg_id}.parquet\", i < DISPLAY, config.use_wavelet\n",
+    "    )\n",
     "    all_eegs2[eeg_id] = img"
    ]
   },
@@ -229,7 +231,9 @@
    "source": [
     "# Infer efficientNet on test data\n",
     "preds = []\n",
-    "test_ds = EEGDataset(test_df, specs=spectrograms2, eeg_specs=all_eegs2, targets=TARGETS, mode=\"test\")\n",
+    "test_ds = EEGDataset(\n",
+    "    test_df, specs=spectrograms2, eeg_specs=all_eegs2, targets=TARGETS, mode=\"test\"\n",
+    ")\n",
     "test_loader = DataLoader(test_ds, shuffle=False, batch_size=64, num_workers=3)\n",
     "\n",
     "for i in range(5):\n",
@@ -246,8 +250,11 @@
     "        model = torch.load(config.full_path + \"trained-model-effnet-mlip9/\" + ckpt_file)\n",
     "    else:\n",
     "        model = tr.load_from_checkpoint(\n",
-    "        ckpt_file, weight_file=config.trained_weight_file,  use_kaggle_spectrograms=config.USE_KAGGLE_SPECTROGRAMS, use_eeg_spectrograms=config.USE_EEG_SPECTROGRAMS\n",
-    "    )\n",
+    "            ckpt_file,\n",
+    "            weight_file=config.trained_weight_file,\n",
+    "            use_kaggle_spectrograms=config.USE_KAGGLE_SPECTROGRAMS,\n",
+    "            use_eeg_spectrograms=config.USE_EEG_SPECTROGRAMS,\n",
+    "        )\n",
     "    model = model.to(device).eval()\n",
     "    fold_preds = []\n",
     "\n",
