--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -176,7 +176,7 @@
     "\n",
     "    # First, handle the wav2vec-only processing\n",
     "    # Define a directory for wav2vec processed data without filtering\n",
-    "    w2v_only_dir = os.path.join(config.data_w2v_specs, 'wav2vec_only')\n",
+    "    w2v_only_dir = os.path.join(config.data_w2v_specs, \"wav2vec_only\")\n",
     "    os.makedirs(w2v_only_dir, exist_ok=True)\n",
     "\n",
     "    # Define output filename for wav2vec processed data without filtering\n",
@@ -199,8 +199,8 @@
     "    # Then, continue with the existing loop for filtered data processing\n",
     "    for filter_type, cutoff in cutoffs.items():\n",
     "        # Define directories for raw and w2v processed data\n",
-    "        raw_dir = os.path.join(config.data_w2v_specs, filter_type.name, 'raw')\n",
-    "        w2v_dir = os.path.join(config.data_w2v_specs, filter_type.name, 'w2v')\n",
+    "        raw_dir = os.path.join(config.data_w2v_specs, filter_type.name, \"raw\")\n",
+    "        w2v_dir = os.path.join(config.data_w2v_specs, filter_type.name, \"w2v\")\n",
     "\n",
     "        # Ensure directories exist\n",
     "        os.makedirs(raw_dir, exist_ok=True)\n",
@@ -213,18 +213,20 @@
     "        try:\n",
     "            # Check if raw filtered data needs to be processed\n",
     "            if not os.path.exists(raw_output_filename) or force_regenerate:\n",
-    "                if 'data_for_processing' not in locals():\n",
+    "                if \"data_for_processing\" not in locals():\n",
     "                    # Load the data only if it hasn't been loaded already\n",
     "                    parquet_file = pd.read_parquet(os.path.join(read_path, f))\n",
     "                    data_for_processing = parquet_file.iloc[:, 1:].values\n",
     "                parquet_file_non_nan = np.nan_to_num(data_for_processing, nan=0)\n",
     "\n",
-    "                filtered_spectrogram = ft.apply_filter_to_spectrogram(parquet_file_non_nan, cutoff, fs, filter_type)\n",
+    "                filtered_spectrogram = ft.apply_filter_to_spectrogram(\n",
+    "                    parquet_file_non_nan, cutoff, fs, filter_type\n",
+    "                )\n",
     "                np.save(raw_output_filename, filtered_spectrogram)\n",
     "\n",
     "            # Check if w2v processed data needs to be generated\n",
     "            if not os.path.exists(w2v_output_filename) or force_regenerate:\n",
-    "                if 'filtered_spectrogram' not in locals():\n",
+    "                if \"filtered_spectrogram\" not in locals():\n",
     "                    # Load the existing raw filtered data if it wasn't just generated\n",
     "                    filtered_spectrogram = np.load(raw_output_filename)\n",
     "\n",
