--- a/training.ipynb
+++ b/training.ipynb
@@ -190,7 +190,9 @@
     "    config.path_to_eeg_spectrograms_npy,\n",
     "    config.should_read_eeg_spectrogram_files,\n",
     ")\n",
-    "print(f\"Length of spectrograms: {spectrograms.__len__()}, Length of all EEGs: {data_eeg_spectrograms.__len__()}\")"
+    "print(\n",
+    "    f\"Length of spectrograms: {spectrograms.__len__()}, Length of all EEGs: {data_eeg_spectrograms.__len__()}\"\n",
+    ")"
    ]
   },
   {
@@ -200,7 +202,9 @@
    "outputs": [],
    "source": [
     "# Plot some example spectograms and remove them afterwards\n",
-    "dataset = EEGDataset(train_data_preprocessed, spectrograms, data_eeg_spectrograms, TARGETS)\n",
+    "dataset = EEGDataset(\n",
+    "    train_data_preprocessed, spectrograms, data_eeg_spectrograms, TARGETS\n",
+    ")\n",
     "dataloader = DataLoader(dataset, batch_size=32, shuffle=False)\n",
     "hp.plot_spectrograms(dataloader, train_data_preprocessed, ROWS=2, COLS=3, BATCHES=2)\n",
     "del dataset, dataloader, train_df\n",
@@ -237,7 +241,9 @@
    "outputs": [],
    "source": [
     "# Validate the model\n",
-    "all_oof, all_true = br.validate_model_across_folds(config, device, all_oof, all_true, valid_loaders)"
+    "all_oof, all_true = br.validate_model_across_folds(\n",
+    "    config, device, all_oof, all_true, valid_loaders\n",
+    ")"
    ]
   },
   {
